# ImageEditor

./: .gitignore  et --hard 16acf39  requirements.txt
ImageEditor/: .dockerignore  Dockerfile  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
ImageEditor/ImageEditor/: asgi.py  settings.py  urls.py  wsgi.py
ImageEditor/core/: forms.py  middleware.py  models.py  urls.py  views.py
ImageEditor/core/management/commands/: delete-image.py
ImageEditor/core/migrations/: 0001_initial.py
ImageEditor/ocr/: apps.py  functions.py  tests.py  urls.py  views.py
ImageEditor/ocr/templates/ocr/: preview.html  result.html  upload.html
ImageEditor/palette/: functions.py  tests.py  urls.py  views.py
ImageEditor/palette/templates/palette/: palette.html  upload.html
ImageEditor/palette/templatetags/: color_filters.py
ImageEditor/processing/: admin.py  apps.py  tests.py  urls.py  views.py
ImageEditor/processing/templates/sinimg/: upload.html
ImageEditor/qr_module/: forms.py  tests.py  urls.py  utils.py  views.py
ImageEditor/qr_module/templates/qr_module/: display_data.html  generate_qr.html  read_qr.html  result.html
ImageEditor/static/css/: about.css  about.styles.css  background.css  button.css  container.css  display_data.css  footer.css  forms.css  generate_qr.css  global.css  home.css  images.css  input.css  media-query.css  navbar.css  palette.css  result.css  select_choice.css  upload.css  utils.css
ImageEditor/static/js/: steganography_process.js  steganography_upload.js  upload2.js  upload_qr.js
ImageEditor/steg/: forms.py  functions.py  models.py  tests.py  views.py
ImageEditor/steg/migrations/: 0001_initial.py
ImageEditor/steg/templates/steg/: upload.html
ImageEditor/steganography/: forms.py  functions.py  models.py  tests.py  urls.py  utils.py  views.py
ImageEditor/steganography/migrations/: 0001_initial.py  0002_steganography_delete_steganographyimage.py  0003_steganographymodel_delete_steganography.py  0004_steganographyimage_delete_steganographymodel.py  0005_steganographymodel_delete_steganographyimage.py
ImageEditor/steganography/templates/steganography/: decode.html  decode_success.html  encode.html  encode_success.html  process.html  reveal.html  select_choice.html  success.html  upload.html
ImageEditor/templates/: about.html  base.html  index.html  upload.html
deployment/: Dockerfile  docker-compose.yml  nginx.conf  polling.py  requirements.txt
templates/: base.html
