[tool.poetry]
name = "imageeditor"
version = "0.1.0"
description = ""
authors = ["Pavel Kuznetsov <62073659+Pavel418@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
asgiref = "3.8.1"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
cloudinary = "1.41.0"
colorama = "0.4.6"
crayons = "0.4.0"
django = "5.1.3"
django-cloudinary-storage = "0.3.0"
django-crontab = "0.7.1"
easyocr = "1.7.2"
filelock = "3.16.1"
fsspec = "2024.10.0"
idna = "3.10"
imageio = "2.36.0"
jinja2 = "3.1.4"
lazy-loader = "0.4"
markupsafe = "3.0.2"
mpmath = "1.3.0"
networkx = "3.4.2"
ninja = "1.11.1.1"
numpy = "2.1.3"
opencv-python = "4.10.0.84"
opencv-python-headless = "4.10.0.84"
packaging = "24.2"
piexif = "1.1.3"
pillow = "10.4.0"
pyclipper = "1.3.0.post6"
python-bidi = "0.6.3"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
requests = "2.32.3"
scikit-image = "0.24.0"
scipy = "1.14.1"
shapely = "2.0.6"
six = "1.16.0"
sqlparse = "0.5.2"
stegano = "0.11.4"
sympy = "1.13.1"
tifffile = "2024.9.20"
torch = "2.5.1"
torchvision = "0.20.1"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
colorthief = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
